[metadata]
name=gym-agx
version=1.0
author=Rta Laezza
author_email=rita.laezza@gmail.com
description=A set of OpenAI Gym environments for deformable linear object manipulation.
long_description=file:README.md
long_description_content_type=text/markdown
url=https://github.com/ritalaezza/gym-agx
license=MIT
classifiers=
    Development Status :: 5 - Production/Stable
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    License :: OSI Approved :: MIT License


[options]
setup_requires=
    pytest-runner
install_requires=
    gym
    numpy
    matplotlib
    scipy
packages=find:
tests_require=
    pytest

[options.extras_require]
deploy = pytest-runner; sphinx<1.7.3; sphinx_rtd_theme

[options.packages.find]
exclude =
    examples
    tests
    docs

[aliases]
test=pytest